# gene-algo

./: CMakeLists.txt  bobsmap.cpp  bobsmap.h  bobtheresercher.cpp  bobtheresercher.h  genome.cpp  genome.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
